# agent-flow

./: ARCHITECTURE.md  COMPLETION_SUMMARY.txt  CONTRIBUTING.md  INDEX.md  PACKAGE_SUMMARY.md  QUICK_REFERENCE.md  README.md  pyproject.toml  validate_package.py
agent_flow/: __init__.py  agent.py  flow.py  router.py  state.py  types.py
examples/: customer_support.py  research_pipeline.py
tests/: conftest.py  test_agent.py  test_flow.py  test_router.py  test_state.py
